clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/virtualservice/egress-zufardhiyaulhaq-dev-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress-zufardhiyaulhaq-dev-vs
  namespace: istio-system
spec:
  hosts:
  - "egress.zufardhiyaulhaq.dev"
  gateways:
  - istio-system/egress-zufardhiyaulhaq-dev-gateway
  http:
  - name: "grpc-route"
    match:
    - uri:
        prefix: /grpc.health.v1.Health/Check
    route:
      - destination:
          port:
            number: 3000
          host: grpc-testing.default.svc.cluster.local
        weight: 100
  - name: "http-route"
    match:
    - uri:
        prefix: /api/v1/
    rewrite:
      uri: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.default.svc.cluster.local
        weight: 100
  exportTo:
    - "."
