clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/virtualservice/helloworld-grpc-zufardhiyaulhaq-dev-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-grpc-zufardhiyaulhaq-dev-vs
  namespace: istio-system
spec:
  hosts:
  - "helloworld-grpc.zufardhiyaulhaq.dev"
  gateways:
  - istio-system/helloworld-grpc-zufardhiyaulhaq-dev-gateway
  http:
  - name: "grpc-testing-default-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 3000
          host: grpc-testing.default.svc.cluster.local
        weight: 100
  exportTo:
    - "."
