clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/virtualservice/server-mtls-zufardhiyaulhaq-dev-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-vs
  namespace: istio-system
spec:
  hosts:
  - "server.mtls.zufardhiyaulhaq.dev"
  gateways:
  - istio-system/server-mtls-zufardhiyaulhaq-dev-gateway
  http:
  - name: "foo-route"
    match:
    - uri:
        prefix: /foo/
    rewrite:
      uri: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.default.svc.cluster.local
        weight: 100
  - name: "bar-route"
    match:
    - uri:
        prefix: /bar/
    rewrite:
      uri: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.default.svc.cluster.local
        weight: 100
  - name: "podinfo-route"
    match:
    - uri:
        prefix: /podinfo/
    rewrite:
      uri: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.default.svc.cluster.local
        weight: 100
  - name: "podinfo-grpc-route"
    match:
    - uri:
        prefix: /grpc.health.v1.Health/Check
    route:
      - destination:
          port:
            number: 3000
          host: grpc-testing.default.svc.cluster.local
        weight: 100
  exportTo:
    - "."
